--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-react": "^3.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "^1.0.2",
